kubernetes/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: api
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      service: api
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        network/sail: "true"
        service: api
    spec:
      containers:
        - env:
            - name: CONTAINER_ROLE
              value: api
            - name: LARAVEL_SAIL
              value: "1"
            - name: WWWUSER
              value: "1000"
            - name: XDEBUG_CONFIG
              value: client_host=host.docker.internal
            - name: XDEBUG_MODE
              value: "off"
          image: jms/app
          name: api
          ports:
            - containerPort: 80
          resources: {}
          volumeMounts:
            - mountPath: /var/www/html
              name: api-claim0
      restartPolicy: Always
      volumes:
        - name: api-claim0
          persistentVolumeClaim:
            claimName: api-claim0
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    service: api
  name: api
spec:
  type: NodePort
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    service: api
status:
  loadBalancer: {}
