kubernetes/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: sail
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              network/sail: "true"
  podSelector:
    matchLabels:
      network/sail: "true"
